@@ -146,7 +146,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.896 $"))
+    (let ((rev "$Revision: 1.897 $"))
       (and (string-match "\\.\\([0-9]+\\) \$$" rev)
 	   (format "1.3.%d"
 		   (- (string-to-number (match-string 1 rev)) 642)))))
@@ -1872,31 +1872,31 @@ up as a new frame.")
 
 (defconst w3m-meta-content-type-charset-regexp
   (eval-when-compile
-    (concat "<meta[ \t]+http-equiv=\"?Content-type\"?[ \t]+"
-	    "content=\"?\\([^;]+\\);[ \t]*charset=\\([^\"]+\\)\"?"
-	    "[ \t]*/?>"))
+    (concat "<meta[ \t\n]+http-equiv=\"?Content-type\"?[ \t\n]+"
+	    "content=\"?\\([^;]+\\);[ \t\n]*charset=\\([^\"]+\\)\"?"
+	    "[ \t\n]*/?>"))
   "Regexp used in parsing `<META HTTP-EQUIV=\"Content-Type\" content=\"...;charset=...\">
 for a charset indication")
 
 (defconst w3m-meta-charset-content-type-regexp
   (eval-when-compile
-    (concat "<meta[ \t]+content=\"?\\([^;]+\\);[ \t]*charset=\\([^\"]+\\)\"?"
-	    "[ \t]+http-equiv=\"?Content-type\"?[ \t]*/?>"))
+    (concat "<meta[ \t\n]+content=\"?\\([^;]+\\);[ \t\n]*charset=\\([^\"]+\\)\"?"
+	    "[ \t\n]+http-equiv=\"?Content-type\"?[ \t\n]*/?>"))
   "Regexp used in parsing `<META content=\"...;charset=...\" HTTP-EQUIV=\"Content-Type\">
 for a charset indication")
 
 (defconst w3m-meta-refresh-content-regexp
   (eval-when-compile
-    (concat "<meta[ \t]+http-equiv=\"?refresh\"?[ \t]+"
-	    "content=\"?\\([^;]+\\);[ \t]*url=\\([^\"]+\\)\"?"
-	    "[ \t]*/?>"))
+    (concat "<meta[ \t\n]+http-equiv=\"?refresh\"?[ \t\n]+"
+	    "content=\"?\\([^;]+\\);[ \t\n]*url=\\([^\"]+\\)\"?"
+	    "[ \t\n]*/?>"))
   "Regexp used in parsing `<META HTTP-EQUIV=\"Refresh\" content=\"n;url=...\">
 for a refresh indication")
 
 (defconst w3m-meta-content-refresh-regexp
   (eval-when-compile
-    (concat "<meta[ \t]+content=\"?\\([^;]+\\);[ \t]*url=\\([^\"]+\\)\"?"
-	    "[ \t]+http-equiv=\"?refresh\"?[ \t]*/?>"))
+    (concat "<meta[ \t\n]+content=\"?\\([^;]+\\);[ \t\n]*url=\\([^\"]+\\)\"?"
+	    "[ \t\n]+http-equiv=\"?refresh\"?[ \t\n]*/?>"))
   "Regexp used in parsing `<META content=\"n;url=...\" HTTP-EQUIV=\"Refresh\">
 for a refresh indication")
 
